--- a/package.json
+++ b/package.json
@@ -18,26 +18,26 @@
   ],
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "eslint-config-next": "13.0.3",
     "framer-motion": "^7.6.7",
-    "next": "13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "15.5.10",
+    "react": "19.2.4",
+    "react-dom": "19.2.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.24",
     "eslint": "^8.27.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19"
   }
 }
